# nexusvenue

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: goldset.json
data/venue/: ballrooms.csv  overflow-edges.csv  properties.csv
docs/: sql-vs-cypher.md
src/nexusvenue/: __init__.py  cli.py  config.py
src/nexusvenue/etl/: extract.py  load.py  resolve.py  venue_intel.py
src/nexusvenue/evals/: judge.py  metrics.py
src/nexusvenue/graph/: queries.py  schema.py
src/nexusvenue/mockdata/: generate.py
src/nexusvenue/rag/: advisor.py  embed.py  retrieve.py
